--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,17 @@
-include ':library'
-include ':app'
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
+include ':app', ':library'
 rootProject.name = "NumbersToLetters"
